<resources>
    <string name="app_name">Accounting</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_about">О приложении</string>
    <string name="action_exit">Выход</string>
    <string name="action_add_bill">Добавить счет</string>
    <string name="action_add_income">Добавить категорию дохода</string>
    <string name="action_add_rate">Добавить категорию расхода</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="quit">Подтверждение выхода</string>
    <string name="really_quit">Вы уверены что хотите выйти?</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="aboutText">Laboratory work #5\nAuthor: Danis Ivayev\nGroup: 6122M\nUniversity: SSAU\n </string>
    <string name="tab_title_1">Счета</string>
    <string name="tab_title_2">Категории доходов</string>
    <string name="tab_title_3">Категории расходов</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_descript">Посмотреть описание</string>
    <string name="menu_add_operat">Добавить операцию</string>
    <string name="menu_look_operat">Просмотреть операции</string>
    <string name="dialog_name">Название:</string>
    <string name="dialog_balance">Баланс:</string>
    <string name="dialog_description">Описание:</string>
    <string name="dialog_title">Добавление счета</string>
    <string name="category_incometitle">Добавление категории доходов</string>
    <string name="category_ratetitle">Добавление категории расходов</string>
    <string name="operation_title">Добавление операции</string>
    <string name="search_title">Поиск операций</string>
    <string name="search_hint">Search hint</string>
    <string name="search_message">Введите строку для поиска</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="description">description</string>
    <string name="o_date">Дата: </string>
    <string name="o_type">Тип: </string>
    <string name="o_value">Значение: </string>
    <string name="o_billfrom">Выбранный счет: </string>
    <string name="o_billto">На какой счет: </string>
    <string name="o_category">Категория: </string>
    <string name="o_income_category">Приходная</string>
    <string name="o_rate_category">Расходная</string>
    <string name="income">Приход</string>
    <string name="rate">Расход</string>
    <string name="transfer">Перевод</string>
    <string name="title_activity_operation">OperationActivity</string>
    <string name="add_oper_error_message">Добавьте хотя бы по одной категории прежде, чем добавлять операции</string>
    <string name="add_error_bills">Для перевода нужно иметь хотя бы два счета</string>
    <string name="add_error_balance">Баланс не должен быть отрицательным. Баланс поставлен максимальным</string>
    <string name="add_success_message">Операция добавлена</string>
    <string name="title_activity_add_operation">AddOperationActivity</string>
    <string name="index">index</string>
    <string name="id">id</string>
    <string name="billname">billname</string>
    <string name="billfrom">billfrom</string>
    <string name="billto">billto</string>
    <string name="category">category</string>
    <string name="bill_delete_title">Удаление счета</string>
    <string name="bill_delete_message">Выберите на какой счет перенести операции</string>
    <string name="bill_delete_req">Требуется другой счет, на который можно перенести все операции</string>
    <string name="title_activity_oper_description">OperDescriptionActivity</string>
    <string name="oper_mes_search">Поиск по описанию</string>
    <string name="oper_mes_bill">Операции счета: </string>
    <string name="oper_mes_notfound">Операции не найдены</string>
</resources>
