<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        />

    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_bill" android:title="@string/action_add_bill"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_income" android:title="@string/action_add_income"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_rate" android:title="@string/action_add_rate"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
