<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/holo_blue_dark" android:dividerHeight="1dp"
        android:textColor="#FFFFFF"
        android:id="@+id/billListView"
        android:clickable="false"
        />
</RelativeLayout>